# auralog-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/auralog/: __init__.py  _state.py  config.py  handler.py  logger.py  transport.py  types.py
src/auralogs/: __init__.py  config.py  error_capture.py  handler.py  logger.py  transport.py  types.py
tests/: test_config.py  test_error_capture.py  test_global_metadata.py  test_handler.py  test_init.py  test_logger.py  test_transport.py  test_types.py
