[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auralog"
version = "0.2.0"
description = "Auralog Python SDK — agentic logging and application awareness."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "James Thomas", email = "james.c.e.thomas@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
]
keywords = ["logging", "observability", "error-tracking", "ai", "claude", "monitoring"]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://auralog.ai"
Documentation = "https://docs.auralog.ai"
Repository = "https://github.com/auralog-ai/auralog-python"
Issues = "https://github.com/auralog-ai/auralog-python/issues"
Changelog = "https://github.com/auralog-ai/auralog-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auralog"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
